# simple-mail

./: .gitignore  CMakeLists.txt  README.md
client/: common.h  main.c  recv.c  send.c
conn/: conn.c  conn.h  error.h  log.h  op.c
pop3/: client.c  client.h  error.h  log.h  pop3.h
smtp/: client.c  client.h  error.h  log.h  parser.c  parser.h  smtp.h
test/: conn_op.h  run.c  smtp_parser.h
